--- a/help.html
+++ b/help.html
@@ -206,7 +206,7 @@
             <i class="fab fa-whatsapp"></i> WhatsApp
         </a>
         
-        <script src="/index.js"></script>
+        <script src="index.js"></script>
     </div>
 
 
