Correcting spelling and breaks before lists

--- a/general.html
+++ b/general.html
@@ -27,8 +27,8 @@
         <div class="discover-content">
             <h1>Discover Fiordland</h1>
             <p>Fiordland is a hidden gem in the South West of New Zealand's South Island. Its 12, 500km2 making it New
-                Zealandss biggest national park. It's known for having many good hikes, being a home to many of New
-                Zealands native birds and marine life, as well as having a vast landscape.</p>
+                Zealandss biggest national park. It's known for having many spectacular hikes, being a home to many of New
+                Zealands native birds and marine life, as well as having a impressive landscapes.</p>
         </div>
     </div>
     <div class="grey-background">
