--- a/help.html
+++ b/help.html
@@ -37,7 +37,7 @@
     <div class="grey-background">
 
         <h3>Community Led Projects</h3>
-        <p>These projects can help you to give aid to what needs it most, and offers opurtunities to volenteer.</p>
+        <p>These projects can help you to give aid to what needs it most, and offers opurtunities to volenteer. <br>Some ways you can help comummity projects are:</p>
         <ul>
             <li>Participate on local restoration programs</li>
             <li>Join native tree planting programs, this helps by getting more native trees in the area, helping to make
@@ -67,7 +67,7 @@
     <div class="blue-background">
         <h3>Invasive Species Management</h3>
         <p>Managing the amount of pests and invase species is important because these pests kill many native birds, and
-            also eat their eggs too, which causes New Zealands bird numbers to decrease significantly. Some ways you can
+            also eat their eggs too, which causes New Zealands bird numbers to decrease significantly. <br>Some ways you can
             be involved in this are:</p>
         <ul>
             <li>Learning to identify and report pests/invasive species</li>
@@ -90,7 +90,7 @@
 
     <div class="grey-background">
         <h3>Responsible Tourism</h3>
-        <p>If you ever get the chance to go to Fiordland, it is important that you are respectful to the whenua. Some
+        <p>If you ever get the chance to go to Fiordland, it is important that you are respectful to the whenua. <br>Some
             ways you can do this is:</p>
         <ul>
             <li>Staying on the trail, this means not walking over the mosses and bushes which prevents them from dying
@@ -114,7 +114,7 @@
     </div>
     <div class="blue-background">
         <h3>Sustainable Practices</h3>
-        <p>Doing sustainable everyday contributions can considerably help, some of these could be: </p>
+        <p>Doing sustainable everyday contributions can considerably help. <br>Some of these could be: </p>
         <ul>
             <li>Reducing your carbon footprint, this could be taking a bus rather then a car, using energy-efficent
                 light bulbs, and avoiding food waste</li>
@@ -143,7 +143,7 @@
     <div class="grey-background">
         <h3>Awareness</h3>
         <p>By learning and helping others to learn more about Fiordland and the complecations to its biodiversity,
-            ecosystems and nature you learn about more ways to help, and be respectful and support the enviroment. Some
+            ecosystems and nature you learn about more ways to help, and be respectful and support the enviroment. <br>Some
             ways to learn more are:</p>
         <ul>
             <li>Attend local conservation workshops</li>
@@ -181,7 +181,7 @@
         <h3>Respecting the culture</h3>
         <p>It is important to respect and acknowledge the culture and traditions of the people who came first, in Māori
             culture the land and nature are very important and are to be respected and treated well. This means
-            practicing Kaitiakitanga, which is a Māori value about guardianship and care for the enviroment which
+            practicing kaitiakitanga, which is a Māori value about guardianship and care for the enviroment which
             embodies protecting the land, which is important for keeping Fiordland the way it is, allowing its natrual
             elements and beauty to come through!</p>
         <div class="images-section">
