Added alts, fix spelling, change line height

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         </div>
         <div class="image-row">
             <div class="image-container">
-                <img class="home-img" src="images/waterfall-greenbackground.jpg"
-                    alt="waterfall with green plants by where it falls">
+                <img class="home-img" src="images/waterfall-greenbackground.jpg" alt="waterfall with green plants by where it falls">
                 <div class="photographer-credit">Pexels, Anastasia Yudin</div>
             </div>
             <div class="image-container">
