--- a/problems.html
+++ b/problems.html
@@ -41,19 +41,19 @@
             <li>Glaciers retreating, this is caused by rising temperatures</li>
             <li>Biodiversity shifts, this disrupts the various ecosystems and vegetation, as it could be too hot making
                 it harder for it to survive, this also affects the native species.</li>
-            <li>Ocean acidfication, caused by the ocean absobing excess Carbon dioxide. This impacts marine life,
-                particually species which rely on calcium cabonate (creatures with shells) as the acidifcation affects
+            <li>Ocean acidfication, caused by the ocean absobing excess carbon dioxide. This impacts marine life,
+                particually species which rely on calcium cabonate (creatures with shells and coral) as the acidifcation affects
                 the avalibility of the calcium. Another affect is on smaller organisms (including plankton), with
                 further impacts the food web and larger species, marine animals also spend more energy to neutralize the
                 affect of the acidifcation. </li>
         </ul>
         <div class="images-section">
             <div class="image-container">
-                <img class="problems-img-8" src="images/biodiversity.jpg" alt="">
+                <img class="problems-img-8" src="images/biodiversity.jpg" alt="biodiverse forest with sunlight streaming through">
                 <div class="photographer-credit">Pexels, Alenka Skvarc</div>
             </div>
             <div class="image-container">
-                <img class="problems-img-9" src="images/ocean-acidification.jpg" alt="">
+                <img class="problems-img-9" src="images/ocean-acidification.jpg" alt="dead coral, caused by ocean acidification">
                 <div class="photographer-credit">Unsplash, Jeremy Bishop</div>
             </div>
         </div>
