--- a/problems.html
+++ b/problems.html
@@ -49,12 +49,12 @@
         </ul>
         <div class="images-section">
             <div class="image-container">
-                <img class="problems-img-8" src="images/biodiversity.jpg" alt="biodiverse forest with sunlight streaming through">
-                <div class="photographer-credit">Pexels, Alenka Skvarc</div>
+                <img class="problems-img-8" src="images/biodiversity.jpg" alt="melting glacier in a lake">
+                <div class="photographer-credit">Unsplash, Jordan Heath</div>
             </div>
             <div class="image-container">
                 <img class="problems-img-9" src="images/ocean-acidification.jpg" alt="dead coral, caused by ocean acidification">
-                <div class="photographer-credit">Unsplash, Jeremy Bishop</div>
+                <div class="photographer-credit">Unsplash, NOAA</div>
             </div>
         </div>
     </div>
